Try something but decide to move on instead. Boom.

--- a/coin-combinator.html
+++ b/coin-combinator.html
@@ -22,7 +22,14 @@
       </form>
 
       <div id="result">
-        <p>Your change is <span class="sacajaweaDollar"></span> dollars <span class="halfDollar"></span> halfdollar <span class="quarters"></span> quarters <span class="dimes"></span> dimes <span class="nickels"></span> nickels and <span class="pennies"></span> pennies! </p>
+        <p>
+          Your change is <span class="sacajaweaDollar"></span> dollars
+          <span class="halfDollar"></span> halfdollars
+          <span class="quarters"></span> quarters
+          <span class="dimes"></span> dimes
+          <span class="nickels"></span> nickels and
+          <span class="pennies"></span> pennies!
+        </p>
       </div>
 
     </div>
