fix all of our problems

--- a/coin-combinator.html
+++ b/coin-combinator.html
@@ -24,10 +24,10 @@
       <div id="result">
         <p>
           Your change is <span class="sacajaweaDollar"></span> dollars
-          <span class="halfDollar"></span> halfdollars
-          <span class="quarters"></span> quarters
-          <span class="dimes"></span> dimes
-          <span class="nickels"></span> nickels and
+          <span class="halfDollar"></span> halfdollar(s)
+          <span class="quarters"></span> quarter(s)
+          <span class="dimes"></span> dime(s)
+          <span class="nickels"></span> nickel(s) and
           <span class="pennies"></span> pennies!
         </p>
       </div>
